trying to fix the white space between the top row and the second row

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -253,7 +253,7 @@ min-height: 65%;
 position: relative;
 float: left;
 background-color: $binaryColor1;
-@include span(5);
+@include span(5 no-gutter);
 height: 19.2%;
 }
 
@@ -366,10 +366,10 @@ left: 16%;
 top: 60%;
 }
 
-#info_box_1{
+/*#info_box_1{
 position: absolute;
 z-index: 0;
-width:100%;
+width:99%;
 top: 0;
 height: 80%;
 background-color: #000000;
@@ -378,7 +378,7 @@ filter: opacity(34%);
 border: 5px solid rgb(0, 255, 0);
 border: 5px solid rgba(255, 255, 255, 1);
 border-bottom: none;
-}
+}*/
 #main_sidebar_box{
 position: absolute;
 height:80%;
@@ -455,15 +455,15 @@ max-width: 90%;
 } 
 
 #CTA_top_text{	
-@include push(6 of 15);
-@include span(8);
+//@include push(6 of 15);
+@include span(1);
 display:inline-block;
 position: absolute;
 z-index: 10;
 top: 4%;
 color: $binaryColor0;
 text-align: right;
-font-size: 4em;
+font-size: 4px;
 }
 #CTA_top_button_text{
 position: absolute;
